Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37131

Mysqldump -L with a list of patterns should return 1 copy of db (or table), even if it fits multiple patterns

    XMLWordPrintable

Details

    • Unexpected results
    • Q3/2025 Maintenance

    Description

      CREATE DATABASE db1;
      CREATE TABLE db1.t1(a int);
       
      --exec $MYSQL_DUMP --compact --wildcards=ON --databases db% d__ _b1
       
      DROP DATABASE db1;
      

      CREATE DATABASE db1;
      CREATE TABLE db1.t1(a int);
      /*M!999999\- enable the sandbox mode */ 
       
      CREATE DATABASE /*!32312 IF NOT EXISTS*/ `db1` /*!40100 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_uca1400_ai_ci */;
       
      USE `db1`;
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
       
      CREATE DATABASE /*!32312 IF NOT EXISTS*/ `db1` /*!40100 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_uca1400_ai_ci */;
       
      USE `db1`;
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
       
      CREATE DATABASE /*!32312 IF NOT EXISTS*/ `db1` /*!40100 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_uca1400_ai_ci */;
       
      USE `db1`;
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
      DROP DATABASE db1;
      

      CREATE TABLE t1(a int);
      --exec $MYSQL_DUMP --compact --wildcards=ON  test t1 t% _1 
      DROP TABLE t1;
      

      CREATE TABLE t1(a int);
      /*M!999999\- enable the sandbox mode */ 
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
      /*!40101 SET @saved_cs_client     = @@character_set_client */;
      /*!40101 SET character_set_client = utf8mb4 */;
      CREATE TABLE `t1` (
        `a` int(11) DEFAULT NULL
      ) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci;
      /*!40101 SET character_set_client = @saved_cs_client */;
      set autocommit=0;
      commit;
      DROP TABLE t1;
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h 10m
                  7h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.