MDEV-37131 Mysqldump -L with a list of patterns should return 1 copy of db (or table), even if it fits multiple patterns.

SHOW ... LIKE pattern queries replaced with SHOW ... WHERE name LIKE
pattern OR ...;